# ai-prelegal

./: .env.example  .gitignore  Dockerfile  README.md  catalog.json  docker-compose.yml
.claude/: settings.json
backend/: pyproject.toml
backend/app/: ai.py  auth.py  config.py  db.py  main.py  schemas.py
backend/tests/: test_api.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: README.md  ai-addendum.md  baa.md  cloud-service-agreement.md  design-partner-agreement.md  dpa.md  mutual-nda.md  partnership-agreement.md  pilot-agreement.md  professional-services-agreement.md  sla.md  software-license-agreement.md
